# second-brain

./: .env.example  .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
sql_migrations/: V1__init_schema.sql
src/second_brain/: main.py
src/second_brain/config/: settings.py
src/second_brain/core/: agent.py
src/second_brain/ltm/: __init__.py  db_manager.py  embedder.py  retriever.py
src/second_brain/tools/: obsidian_sync.py
tests/: conftest.py  test_agent.py  test_embedder.py  test_retriever.py  test_settings.py
tools/: obsidian_sync.py
